--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "nodemon": "^1.17.2"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "apollo-server-express": "^1.3.2",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^2.23.1"
   }
 }
