--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^2.23.1"
   }
