--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "graphql": "^0.13.2",
-    "graphql-tools": "^2.23.1"
+    "graphql-date": "^1.0.3",
+    "graphql-tools": "^2.23.1",
+    "lodash": "^4.17.5",
+    "mysql2": "^1.5.3",
+    "sequelize": "^4.37.2",
+    "sqlite3": "^4.0.0"
   }
 }
